src/react/components/Components.style.less
/* ... */
.mainProjectDisplayFirstAnimation {
  opacity: 0;
  width: 0;
  animation: showProjectContainer 2s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

.mainProjectDisplayHideAnimation {
  animation: hideProjectContainer 1s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

.mainProjectDisplay {
  position: absolute;
  top: 25vh;
  left: 10vw;
  height: 50vh;
  width: 80vw;

  .mainProjectImage {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 5px;
    -webkit-box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.59);
    -moz-box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.59);
    box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.59);
  }

  .mainProjectTitle {
    position: absolute;
    top: 38vh;
    left: -5vw;
    font-size: 75px;
    color: @buttonActiveColor;
    z-index: 2;
  }

  .mainProjectTitleFirstAnimation {
    top: 34vh;
    opacity: 0;
    animation: titleDrop 1s;
    animation-iteration-count: 1;
    animation-delay: 1s;
    animation-fill-mode: forwards;
  }

  .mainProjectTitleAnimation {
    animation: projectTitleSlide 0.5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
  }

  @keyframes titleDrop {
    0% {
      opacity: 0;
      top: 34vh;
    }
    100% {
      opacity: 1;
      top: 38vh;
    }
  }

  @keyframes projectTitleSlide {
    0% {
      top: 38vw;
    }
    100% {
      top: -2vh;
    }
  }

  .mainProjectTitleBackAnimation {
    top: -2vh;
    animation: projectTitleSlideBack 0.5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
    animation-delay: 1.5s;
  }

  @keyframes projectTitleSlideBack {
    0% {
      top: -2vh;
    }
    100% {
      top: 38vh;
    }
  }

  .showMore {
    position: absolute;
    font-size: 30px;
    width: 300px;
    border-bottom: 1px solid @buttonActiveColor;
    color: @buttonActiveColor;
    text-align: end;
    text-align: end;
    top: 52vh;
    left: 65vw;
    cursor: pointer;
    -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -o-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
    z-index: 2;
  }

  .showMoreFirstAnimation {
    top: 48vh;
    opacity: 0;
    animation: showMoreDrop 0.5s;
    animation-iteration-count: 1;
    animation-delay: 1.5s;
    animation-fill-mode: forwards;
  }
  @keyframes showMoreDrop {
    0% {
      top: 48vh;
      opacity: 0;
    }
    100% {
      top: 52vh;
      opacity: 1;
    }
  }

  .showMoreAnimation {
    animation: showMoreSlide 0.5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
  }
  @keyframes showMoreSlide {
    0% {
      left: 65vw;
    }
    100% {
      left: 0;
    }
  }

  .showMoreBackAnimation {
    left: 0;
    animation: showMoreSlideBack 0.5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
    animation-delay: 1.5s;
  }
  @keyframes showMoreSlideBack {
    0% {
      left: 0;
    }
    100% {
      left: 65vw;
    }
  }

  @media screen and (max-width: 767px) {
    top: 5vh;
    left: 5vw;
    height: 80vh;
    width: 90vw;

    .mainProjectTitle {
      top: 70vh;
      left: -5vw;
      font-size: 36px;
    }

    @keyframes titleDrop {
      0% {
        opacity: 0;
        top: 66vh;
      }
      100% {
        opacity: 1;
        top: 70vh;
      }
    }

    .mainProjectTitleBackAnimation {
      top: -2vh;
      animation-delay: 0.9s;
    }

    @keyframes projectTitleSlideBack {
      0% {
        top: -2vh;
      }
      100% {
        top: 70vh;
      }
    }

    .showMore {
      font-size: 14px;
      width: 120px;
      top: 82vh;
      left: 65vw;
    }

    .showMoreFirstAnimation {
      top: 78vh;
    }
    @keyframes showMoreDrop {
      0% {
        top: 78vh;
        opacity: 0;
      }
      100% {
        top: 82vh;
        opacity: 1;
      }
    }

    .showMoreBackAnimation {
      left: 0;
      animation-delay: 0.9s;
    }
  }
}

.infoProjectDisplayShowAnimation {
  width: 0;
  animation: showProjectInfoContainer 1s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

@keyframes showProjectInfoContainer {
  0% {
    width: 0;
  }
  100% {
    width: 80vw;
  }
}

.infoProjectDisplayHideAnimation {
  width: 80vw;
  animation: hideProjectInfoContainer 1s;
  animation-iteration-count: 1;
  animation-delay: 1.2s;
  animation-fill-mode: forwards;
}

@keyframes hideProjectInfoContainer {
  0% {
    width: 80vw;
  }
  100% {
    width: 0;
  }
}

@media screen and (max-width: 767px) {
  .infoProjectDisplayHideAnimation {
    width: 90vw;
    animation-delay: 0.6s;
  }

  @keyframes showProjectInfoContainer {
    0% {
      width: 0;
    }
    100% {
      width: 90vw;
    }
  }
  @keyframes hideProjectInfoContainer {
    0% {
      width: 90vw;
    }
    100% {
      width: 0;
    }
  }
}
/* ... */

